# Marine-Buddy

./: .gitignore  Dockerfile  data.dvc  locations.json  pyproject.toml
.dvc/: config
.github/workflows/: deploy_service.yml  fetch_data.yml  test_predictions.yml  train_model.yml
gx/: great_expectations.yml  run_my_checkpoint.py
gx/checkpoints/: my_checkpoint.yml
gx/expectations/: .ge_store_backend_id  my_suite.json
reports/sites/: data_drift.html  index.html  stability_tests.html
src/: settings.py
src/client/: Dockerfile  package-lock.json  package.json
src/client/public/: index.html
src/client/src/: App.js
src/client/src/components/: AdminPanel.js  Animals.js  DataQuality.js  Evaluation.js  Header.js  Home.js  Map.js  Predictions.js  ProductionEvaluation.js  SeaPointInfo.js  SeaPointInfoCard.js
src/data/: data_fetcher.py  data_manager.py  location_manager.py
src/data/scripts/: fetch_marine_data.py  fetch_weather_data.py  merge_data.py  preprocess_marine_data.py  preprocess_weather_data.py  split_data.py
src/db/: database.py  database_manager.py
src/models/: mlflow_client.py  model.py  trained_model.py
src/models/scripts/: predict_model.py  test_predictions.py  train_model.py  validate_predictions.py
src/serve/: api.py
src/validation/: data_drift.py  test_data.py
src/visualization/: visualization.py
tests/: test_marine_api.py
