[tool.poetry]
name = "marine-buddy"
version = "0.1.0"
description = ""
authors = ["jasasuster <92645266+jasasuster@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
flask = "^3.0.3"
requests = "^2.32.2"
numpy = "^1.26.4"
flask-cors = "^4.0.1"
dvc = "^3.51.1"
dvc-s3 = "^3.2.0"
dagshub = "^0.3.27"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fetch_marine_data = "src.data.scripts.fetch_marine_data:main"
preprocess_marine_data = "src.data.scripts.preprocess_marine_data:main"

fetch_weather_data = "src.data.scripts.fetch_weather_data:main"
preprocess_weather_data = "src.data.scripts.preprocess_weather_data:main"

merge_data = "src.data.scripts.merge_data:main"
split_data = "src.data.scripts.split_data:main"